sass/custom-styles.scss
/* ... */
section {
  &.object-filters {
    .facet-container {
      span {
        &.label {
          color: $primary;
          text-transform: uppercase;
          font-weight: 300;
          font-size: 14px;
        }
      }
      .facetwp-facet {
        font-size: 14px;
        margin-bottom: 20px;
        &.facetwp-type-radio {
          display: flex;
          flex-wrap: wrap;
          flex-direction: row;
          .facetwp-radio {
            margin-right: 4px;
            padding: 4px 4px 2px 4px;
            border: 1px solid #888;
            color: #888;
            background: none;
            white-space: nowrap;
            font-size: 12px;
            line-height: 15px;
            &.checked {
              border-color: $primary;
              color: $white;
              background: $primary;
            }
            &.disabeled {
              background: #fff;
              border: 1px solid #ccc;
              color: #ccc;
            }
          }


        }
      }
    }
  }
}
// Footer
footer.footer {
  padding-top: 40px;
  a {
    color: $light;
    text-decoration: none;
    &:hover {
      color: darken($light, 10%);
      text-decoration: underline;
    }
  }
  .copyright {
    font-size: .8em;
  }
  ul {
    width: 100%;
    margin: 0;
    padding: 0;
    display: flex;
    list-style: none;
    line-height: 1.1em;
    li {
      margin: 0 0 0 10px;
      padding: 0;
      display: block;
      a {
        display: block;
        text-decoration: none;
        border-bottom: 3px solid transparent;
        @include transition(500ms);
        &:hover {
          border-bottom: 3px solid $light;
          text-decoration: none;
          @include transition(500ms);
        }
      }
      ul.children {
        display: none;
      }
    }
  }
}
body.front-page {
  footer.footer {
    background: transparent;
    text-align: right;
  }
}
/* single post */

.alignleft, img.alignleft {
  float: left;
  padding-right: 10px;
  padding-bottom: 10px;
}

.alignright, img.alignright {
  float: right;
  padding-left: 10px;
  padding-bottom: 10px;

}

.aligncenter, img.aligncenter {
  float: none;

}

.alignnone, img.alignnone {
  float: none;

}
p.wp-caption-text {
  text-align: center;
  font-size: .9em;
  margin: 0 0 15px 0;
}

article {
  &.publications {
    h3 {
      font-size: 22px;
      color: $primary;
      a {
        color: $primary;
      }
    }
    .contributors {
      font-size: .8em;
      text-transform: uppercase;
      letter-spacing: 1px;
      font-weight: 600;
    }
    .excerpt {

    }
  }
  &.objects {
    .object-card {
      position: relative;
      display: flex;
      border: 6px solid transparent;
      .card-information, .image-container {

      }
      .card-information {
        letter-spacing: 0;
        opacity: 0;
        position: absolute;
        left: 0;
        right: 0;
        top:0;
        bottom: 0;
        background: rgba(0,0,0,.6);
        color: $light;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        padding: 10px;
        h3.object-title {
          font-size: 20px;
          text-transform: uppercase;
          font-weight: 700;
          margin-bottom: 10px;
        }
        a.btn-block {
          font-size: 14px;

        }
        .object-info {
          font-size: 14px;
          a {
            color: $light;
            &:hover {
              color: darken($light, 15%);
              text-decoration: none;
            }
          }
          span {
            color: $light;
            font-size: .9em;
            &.region {
              font-weight: 700;
            }
            &.culture {

            }
            &.creation {
              display: block;
            }
            &.material {
              display: block;
            }
          }
          .dimensions {

          }
        }
        .local {
          span {
            &.region {
              font-weight: 700;
            }
            &.culture {

            }
          }
        }
        a {
          color: $light;
        }
        @include transition(500ms);
        &:hover {
          opacity: 1;
          @include transition(100ms);
        }
      }
      .image-container {
        min-width: 100%;
        min-height: 100%;
      }
    }
  }
  &.post {
    .card-body {
      h3 {
        &.post-title {
          text-transform: uppercase;
          font-weight: 500;
          letter-spacing: 5px;
          font-size: 26px;
        }
      }

      .categories {
        display: flex;
        flex-direction: row;
        a {
          display: inline-block;
          font-size: 13px;
          text-transform: uppercase;
          background: $light;
          line-height: 12px;
          &:hover {

          }
        }
      }
    }
  }
  &.current {
    .object-card {
      border: 6px solid $primary;
    }
  }
}


section {
  &.brand {
    background-size: cover;
    position: relative;
    padding-top: 150px;
    margin-bottom: 30px;
    color: $light;
  }
  &.archive-header {

  }



  &.blog, &.post {
    article {
      span.posted-date {
        font-size: .8em;
        margin: 4px 0;
      }
      span.author-name {
        font-size: .8em;
        margin: 4px 0;
        display: block;
      }
      &.sticky {
        .card-body {
          border-top: 8px solid $secondary;
        }

      }
      .categories {
        line-height: 1.1em;
      }
    }
    a.view-article {
      display: none;
    }
  }
}

/* sidebars and asides */
aside.sidebar {

}


code {
  color: $gray-800;
}
//Responcive Embeds
.embed-container {
		position: relative;
		padding-bottom: 56.25%;
		overflow: hidden;
		max-width: 100%;
		height: auto;
    iframe, object, embed, video {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
	}
/* ... */

